--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,17 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.google.firebase:firebase-auth:9.8.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.android.support:recyclerview-v7:24.0.+'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.google.firebase:firebase-storage:9.8.0'
+    compile 'com.google.firebase:firebase-messaging:9.8.0'
+    compile 'com.google.firebase:firebase-core:9.8.0'
+    compile 'com.google.firebase:firebase-crash:9.8.0'
+    testCompile 'junit:junit:4.12'
 }
+
+
+
+
 
 apply plugin: 'com.google.gms.google-services'
